apps/arduino/arduino_material.css
/* ... */
.spinner-purple {
  border-color: #8e24aa;
}
.active .spinner-layer.spinner-purple {
  /* durations: 4 * ARCTIME */
  -webkit-animation: fill-unfill-rotate 5332ms cubic-bezier(0.4, 0, 0.2, 1) infinite both, red-fade-in-out 5332ms cubic-bezier(0.4, 0, 0.2, 1) infinite both;
  animation: fill-unfill-rotate 5332ms cubic-bezier(0.4, 0, 0.2, 1) infinite both, red-fade-in-out 5332ms cubic-bezier(0.4, 0, 0.2, 1) infinite both;
}


/************/
/*  Others  */
/************/
/* Edit logo for code and xml collapsibles*/
.collapsible_logo {
  width: 3rem;
  font-size: 1.6rem;
  line-height: 3rem;
  font-weight: bold;
  display: block;
  float: left;
  text-align: center;
  margin-right: 1rem;
}


/*****************************/
/*  Overwriting Blockly CSS  */
/*****************************/
/* Blockly text for the following components:  */
.blocklyTreeLabel,           /* Toolbox        */
.blocklyText,                /* Block          */
.goog-menuitem-content {     /* Drop down menu */
  font-family: "Roboto", sans-serif!important;
}

/* Entire Blockly area, Toolbox dranw on top */
.blocklySvg {
  border-width: none !important;
  -webkit-border-radius: 4px !important;
  -moz-border-radius: 4px !important;
  border-radius: 4px !important;
}

/* Toolbox */
.blocklyToolboxDiv {
  border-color: #e0e0e0 !important;
  border-width: 0px 1px 0px 0px !important;
  -webkit-border-radius: 4px 0px 0px 4px !important;
  -moz-border-radius: 4px 0px 0px 4px !important;
  border-radius: 4px 0px 0px 4px !important;
  border: none !important;
  margin: 0px !important;
  padding: 0px 0px 0px 0px !important;
  background: rgba(98, 174, 178, .2) !important;  /* Arduino Light Teal */
  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
  -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
}
.blocklyTreeRoot {
  background: none !important;
  border: none !important;
  margin: 33px 0px 0px 0px !important;
  padding: 5px 1px !important;
  /* Vertical centre
  position: relative;
  top: 50%;
  transform: translateY(-50%);*/
}
.blocklyTreeRow {
  background: none !important;
  border: none !important;
  margin: 0px 0px !important;
  padding: 8px 16px 8px 0px !important;
  box-sizing: content-box !important;
  /* line-height: 0.5rem !important;
  vertical-align: middle !important;*/
}
.blocklyTreeSelected {
  background-color: #E47128 !important;  /* arduino orange */
}
.blocklyTreeRow:not(.blocklyTreeSelected):hover {
  background-color: #E5AD24 !important;  /* arduino yellow */
}
.blocklyTreeLabel {
}
.blocklyTreeSeparator{
  padding: 0px !important;
  margin: 0px !important;
}

/* Toolbox second column with blocks*/
.blocklyFlyoutBackground {
  fill: #DEEEEF !important;
  fill-opacity: 0.7 !important;
  -webkit-border-radius: 0px 4px 4px 0px !important;
  -moz-border-radius: 0px 4px 4px 0px !important;
  border-radius: 0px 4px 4px 0px !important;
}

/* Blockly scrollbars */
.blocklyScrollbarKnob {
  fill: #00878F !important;
  fill-opacity: 0.7 !important;
}
.blocklyScrollbarBackground {
  stroke-width: 0px !important;
}


/*********************************/
/*  Overwriting Materialize CSS  */
/*********************************/
/* Modify container to have a larger width in all resolutions */
.container {
  max-width: 1650px !important;
  width: 100% !important;
}
@media only screen and (min-width : 601px) {
  .container {
    width: 95% !important;
  }
}
@media only screen and (min-width : 993px) {
  .container {
    width: 90% !important;
  }
}

/* Maximize horizontal space for mobile */
@media only screen and (min-width: 0px) and (max-width: 600px) {
  body {
    padding-top: 0px;
  }
  /* Expand to all visible horizontal space */
  .container {
    width: 100% !important;
    padding: 0 !important;
    margin: 0 !important;
  }
  nav {
    margin: 0 !important;
    padding: 0px 12px !important;
  }
  /* remove space between cards and navigation bar */
  .col {
    margin-top: -8px;
  }
}

/* Increase the text size of the side menu */
ul.side-nav {
  padding: 0px !important;
  line-height: 64px !important;
}
ul.side-nav i {
  font-size: 1.8rem !important;
}
ul.side-nav .collapsible {
  margin: 0 !important;
}
/* Set the background effect in the side menu */
ul.side-nav {
  background-color: #eeeeee;
}
ul.side-nav li ul{
  background-color: #eeeeee;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  border-right: 3px solid #dddddd;
  border-left: 3px solid #ffffff;
}
ul.side-nav li ul li{
  cursor: pointer;
}

/* Add extra margin to the side menu button*/
.button-collapse {
  margin-right: 16px;
}

/* Increase the size of Materialize Modal in small res */
@media only screen and (max-width : 600px) {
  .modal {
    width: 80% !important;
    max-width: 80% !important;
  }
}

/* Need larger icons in buttons */
.mdi-action-visibility {
  font-size: 1.5rem !important;
}
.mdi-action-visibility-off {
  font-size: 1.5rem !important;
}
#button_run .mdi-av-play-arrow {
  font-size: 2.5rem !important;
}
#button_load_xml .mdi-action-extension {
  font-size: 2rem !important;
}

/* Button needs to be at a higher z index than */
/* card when floating and lower when clicked.  */
#button_run:hover {
  -webkit-box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  -moz-box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}
#button_run:active {
  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
  -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
}

/* Circle clipper (loading animation) thickness */
.circle-clipper .circle {
    border-width: 4px !important;
  }
}

